--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -36,6 +36,9 @@ jobs:
       - name: Run tests
         run: npm test
 
+      - name: NPM_TOKEN
+        run: echo ${{ secrets.NPM_TOKEN }}
+
       - name: Semantic Release
         uses: cycjimmy/semantic-release-action@v4
         env:
