--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   ],
   "type": "module",
   "scripts": {
-    "test": "node tests/basic.test.js",
-    "release": "semantic-release"
+    "test": "node tests/basic.test.js"
   },
   "repository": {
     "type": "git",
@@ -65,12 +64,6 @@
     "mysql2": "^3.6.5",
     "mariadb": "^3.4.2",
     "pg": "^8.11.3",
-    "@semantic-release/changelog": "^6.0.3",
-    "@semantic-release/git": "^10.0.1",
-    "@semantic-release/npm": "^11.0.0",
-    "semantic-release": "^23.0.0",
-    "cz-conventional-changelog": "^3.3.0",
-    "commitizen": "^4.3.0"
   },
   "config": {
     "commitizen": {
